corrected navbar z-index

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -6,7 +6,7 @@ nav#desktop {
   position: sticky;
   top: 0;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-  z-index: 99;
+  z-index: 90;
 
   div {
     height: $navbar-height;
@@ -152,7 +152,7 @@ nav#mobile {
     top: 30px;
     left: 16px;
     opacity: 0;
-    z-index: 10;
+    z-index: 99;
     cursor: pointer;
   }
   .toggler-icon {
@@ -164,7 +164,7 @@ nav#mobile {
     position: fixed;
     top: 30px;
     left: 16px;
-    z-index: 9;
+    z-index: 98;
     background-color: #cccccc;
   }
   .navbar-mobile {
@@ -174,7 +174,7 @@ nav#mobile {
     position: fixed;
     top: 110px;
     left: 0;
-    z-index: 8;
+    z-index: 97;
     background-color: #ffffff;
     list-style: none;
 
