--- a/scss/main.scss
+++ b/scss/main.scss
@@ -158,11 +158,11 @@ header {
       padding-left: 24rem;
 
       @media (max-width: 768px) {
-        padding-left: 18rem;
+        padding-left: 12rem;
       }
 
       @media (max-width: 425px) {
-        padding-left: 7rem;
+        padding-left: 4rem;
       }
 
       @media (max-width: 375px) {
@@ -254,6 +254,9 @@ main {
     justify-content: center;
     align-items: center;
 
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
     > img {
       max-width: 400px;
 
@@ -266,10 +269,15 @@ main {
       width: 300px;
       height: 300px;
       border-radius: 50%;
-      margin: 3em 2rem;
+      margin: 2rem;
       box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
       overflow: hidden;
       position: relative;
+
+      @media (max-width: 1024px) {
+        width: 250px;
+        height: 250px;
+      }
 
       img {
         width: auto;
@@ -470,10 +478,3 @@ main {
 
 // Footer
 @import "footer";
-
-// Media queries
-@media only screen and (max-width: 768px) {
-  .img-container {
-    flex-direction: column;
-  }
-}
